# WaveSignID

./: .gitignore  DEVELOPMENT.md  README.md  demo.py  pyproject.toml  requirements.txt  setup_cython.py
scripts/: build_release.sh
src/waveid/: __init__.py  crypto.py  gateway.py  identity.py  protocol.py
src/waveid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_crypto.py  test_gateway.py  test_identity.py  test_protocol.py
